fixed item layout issue

--- a/static/style.css
+++ b/static/style.css
@@ -59,15 +59,15 @@ header .banner {
   align-items: center;
   padding: 0 0 1.5vw;
   text-align: center;
-/*   background: #dcd9d2; */
   background: linear-gradient(to right, rgba(180,178,175,1) 0%,rgba(220,217,210,1) 25%,rgba(220,217,210,1) 75%,rgba(180,178,175,1) 100%); 
-  flex-grow: 1; 
 }
 
 .frames .frame {
   display: inline-flex;
   flex-direction: column;
   justify-self: center;
+  /* flex 0 0 20rem;
+  flex-flow: wrap; */
 }
 
 .frames .frame.future, .frames .frame.past {
@@ -75,6 +75,7 @@ header .banner {
 }
 
 .item {
+  width: 24rem;
   flex: 1;
 }
 
@@ -204,7 +205,7 @@ header .banner {
 
 .share {
   color: lightgray;
-  padding: 0 1vw;
+  padding: 0.5rem;
 }
 
 .share a:link {
